--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,6 +1,5 @@
-<h3>トップページ</h3>
+<h3>record</h3>
 <h3><%= link_to '筋トレ投稿', new_record_path%></h3>
-<h3><%= link_to '筋トレ一覧', records_path%></h3>
 <h3><%= link_to '食事投稿・コンディション', new_food_path%></h3>
 <h3><%= link_to '食事一覧・コンディション',foods_path%></h3>
 
