投稿の実装

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -2,3 +2,4 @@
 
 <h3><%= link_to '筋トレ', records_path%></h3>
 <h3><%= link_to '食事・コンディション',foods_path%></h3>
+<h3><%= link_to '質問',questions_path%></h3>
